[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/font32.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Sprites.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/playerDeath.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/music.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/win.wav" type="AudioStream" id=8]

[node name="Game" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="ParallaxBackground" parent="." index="0" instance=ExtResource( 2 )]

_sections_unfolded = [ "Scroll" ]

[node name="LabelScore" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 480.0
margin_top = 384.0
margin_right = 925.0
margin_bottom = 462.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Score: 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TimerSpawn" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="TimerScore" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Sprites" parent="." index="4" instance=ExtResource( 4 )]

[node name="Player" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 400, 225 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="AudioDeath" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 6 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AudioMusic" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 7 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AudioWin" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 8 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="TimerSpawn" to="." method="_on_TimerSpawn_timeout"]

[connection signal="timeout" from="TimerScore" to="." method="_on_TimerScore_timeout"]

[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]

[connection signal="finished" from="AudioDeath" to="." method="_on_deathSound_finished"]


